<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:title="Principal">
            <menu>
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/menu_actividad"
                    android:title="@string/menu_actividades" />
                <item
                    android:id="@+id/nav_actividades"
                    android:icon="@drawable/menu_amigos"
                    android:title="@string/menu_amigos" />

            </menu>
        </item>

        <item android:title="Trabajos">

            <menu>
                <item
                    android:id="@+id/nav_gallery"
                    android:icon="@drawable/menu_proyectos"
                    android:title="@string/menu_misproyectos" />
                <item
                    android:id="@+id/nav_slideshow"
                    android:icon="@drawable/menu_colab"
                    android:title="@string/menu_soycolaborador" />
            </menu>
        </item>

        <item android:title="Perfil">
            <menu>
                <item
                    android:id="@+id/nav_cuenta"
                    android:icon="@drawable/menu_cuenta"
                    android:title="@string/menu_cuenta" />
                <item
                    android:id="@+id/nav_cerrarsesion"
                    android:icon="@drawable/menu_salir"
                    android:title="@string/menu_cerrarsesion" />
            </menu>
        </item>

    </group>

</menu>